Update Node type to include a list of versions containing flow id, image tag and baseline flag
